--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peritext-contextualizer-webpage",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Peritext default webpage contextualizer",
   "main": "dist/index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "react": "^15.6.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -23,5 +24,6 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.24.1"
-  }
+  },
+  "dependencies": {}
 }
