--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Peritext default webpage contextualizer",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf dist; mkdir dist; babel src -d dist"
+    "build": "rm -rf dist; mkdir dist; babel src -d dist",
+    "add-build": "git add dist"
   },
+  "pre-commit": [
+    "build",
+    "add-build"
+  ],
   "author": "Robin de Mourat",
   "license": "ISC",
   "peerDependencies": {
@@ -23,7 +28,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {}
 }
