--- a/package.json
+++ b/package.json
@@ -1,35 +1,60 @@
 {
   "name": "peritext-contextualizer-webpage",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "Peritext default webpage contextualizer",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist; mkdir dist; babel src -d dist",
-    "add-build": "git add dist"
+    "addbuild": "git add dist"
   },
   "pre-commit": [
     "build",
-    "add-build"
+    "addbuild"
   ],
   "author": "Robin de Mourat",
-  "license": "ISC",
+  "license": "AGPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/peritext/peritext-contextualizer-webpage/issues"
+  },
+  "homepage": "https://github.com/peritext/peritext-contextualizer-webpage#readme",
   "peerDependencies": {
-    "react": "^15.6.1"
+    "react": "^16.7.0-alpha",
+    "react-dom": "^16.7.0-alpha"
+  },
+  "dependencies": {
+    "peritext-utils": "^0.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-decorators": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-for-of": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "pre-commit": "^1.2.2"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "lodash": "^4.17",
+    "peritext-schemas": "^0.1.0",
+    "pre-commit": "^1.2.2",
+    "react": "^16.7.0-alpha",
+    "react-dom": "^16.7.0-alpha"
   },
-  "dependencies": {}
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-proposal-class-properties"
+    ],
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-react"
+    ]
+  }
 }
